@@ -6,7 +6,7 @@ use warnings;
 use Error::Pure qw(err);
 use List::Util 1.33 qw(none);
 use Mo qw(build is);
-use Mo::utils qw(check_bool check_number);
+use Mo::utils 0.26 qw(check_bool check_number);
 use Mo::utils::CSS 0.02 qw(check_css_class);
 use Readonly;
 use Scalar::Util qw(looks_like_number);
